@@ -23,11 +23,11 @@ repositories {
 
 dependencies {
     compile 'org.apache.commons:commons-collections4:4.4'
-    compile 'org.apache.commons:commons-dbcp2:2.7.0'
-    compile 'org.apache.logging.log4j:log4j-api:2.16.0'
-    compile 'org.apache.logging.log4j:log4j-core:2.16.0'
-    compile 'org.springframework:spring-beans:5.2.1.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.2.1.RELEASE'
+    compile 'org.apache.commons:commons-dbcp2:2.8.0'
+    compile 'org.apache.logging.log4j:log4j-api:2.17.2'
+    compile 'org.apache.logging.log4j:log4j-core:2.17.2'
+    compile 'org.springframework:spring-beans:5.2.2.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.2.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
